Add more triggers and update tests
Signed-off-by: Javier Roman <javier.rmgz@gmail.com>